fixing navigation right spacing; added placeholders

--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,12 @@ h3 {
 }
 
 input, textarea {
-	font-size: 22;
-	display: block;
+	font-size: 12pt;
+	display: inline-block;
 	width: 100%;
 	height: 100%;
 	padding: 5px 10px;
+	margin: 0px 5px 0px 5px;
 	background: none;
 	background-image: none;
 	border: 1px solid #a0b3b0;
@@ -113,6 +114,8 @@ ul.nav-left > li > a:hover {
 .active {
 	background: #27b023;
 	color: #fff;
+	margin: 0px 0px 0px 0px;
+
 }
 .tab {
 	display: inline-block;
@@ -122,8 +125,10 @@ ul.nav-left > li > a:hover {
 }
 .tab-content {
 	display: inline-block;
+	align-content: flex-end;
 }
 .tabs {
+	position:sticky;
 }
 .field-wrap {
 	position: relative;
